add question posing functions and answer checking

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
   <link href="css/style.css" rel="stylesheet">
-  <script src="./game.js"></script>
+  <script src="./game.js" defer></script>
 
 <body>
+  <h1> Mathdragon!</h1>
+  <div class="dragon" id="dragon"> &#128009</div>
+  <div id="question"></div>
+  <input type="text" id='answer'> <button type="submit" id='submit'>isubmit</button>
+  <div id="result"></div>
+
+
   <script>
-    a = game()
-    console.log(a)
   </script>
 </body>
 
