add core gameplay loop
The dragon now grows with each correct answer, new questions are posed
when correct answer is given and score is tallied

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
   <h1> Mathdragon!</h1>
   <div class="dragon" id="dragon"> &#128009</div>
+  <div id='level'>level:</div>
+  <div id='score'>score:</div>
   <div id="question"></div>
-  <input type="text" id='answer'> <button type="submit" id='submit'>isubmit</button>
+  <form id="answerbox">
+    <input type="text" id='answer'> <button type="submit" id='submit' hidden>isubmit</button>
+  </form>
   <div id="result"></div>
 
 
