--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div class="answerarea">
       <div id="question"></div>
       <form id="answerbox">
-        <input type="text" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit" id='submit'
+
+        <input type="number" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit" id='submit'
           hidden></button>
       </form>
     </div>
