add leveling system
Questions now gradually become harder as score increases. Currently
levels go up by one every twenty correct answers. Toned down growth rate
to compensate for easier questions.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <div class="top">
-      <h1> Mathdragon!</h1>
+      <h1 id="name"> Mathdragon!</h1>
       <a style="cursor :pointer;" id='reset'>Reset</a>
       <div class="hud">
-        <!-- <div id='level'></div> -->
-        <div id='score'>score:</div>
+        <div id='level'>Level: </div>
+        <div id='score'>Score:</div>
       </div>
     </div>
     <div class="wherethedragonlives">
