Fix css so no scrolling ever

--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content">
   <title></title>
   <link href="styles.css" rel="stylesheet">
   <script src="./game.js" defer></script>
 
 <body>
   <div class="container">
+
     <div class="top">
       <h1 id="name"> Mathdragon!</h1>
       <a style="cursor :pointer;" id='reset'>Reset</a>
       <div class="hud">
-        <div id='level'>Level: </div>
         <div id='score'>Score:</div>
+        <div id='level'>Level: </div>
       </div>
     </div>
+
     <div class="wherethedragonlives">
       <div class="dragon" id="dragon"> &#128009</div>
     </div>
-    <div id="result"></div>
     <div class="answercontainer">
+      <div id="result"></div>
       <div class="answersmall">
         <div id="question"></div>
         <form id="answerbox">
@@ -34,6 +36,7 @@
       </div>
     </div>
   </div>
+
 
   <script>
   </script>
