--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div id="question"></div>
         <form id="answerbox">
 
-          <input type="number" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit" id='submit'
-            hidden></button>
+          <input type="number" pattern="\d" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit"
+            id='submit' hidden></button>
 
         </form>
       </div>
