Attempted fix iOS not showing numpad (type="tel")

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         <div id="question"></div>
         <form id="answerbox">
 
-          <input type="number" pattern="\d" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit"
+          <input typetell" pattern="\d*" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit"
             id='submit' hidden></button>
 
         </form>
       </div>
     </div>
+
   </div>
 
 
