--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="question"></div>
         <form id="answerbox">
 
-          <input typetell" pattern="\d*" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit"
+          <input type="tel" pattern="\d*" id='answer' placeholder=" ? " autofocus="autofocus"> <button type="submit"
             id='submit' hidden></button>
 
         </form>
