Add autohide numpad if virtualkeyboard is used

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="question"></div>
         <form id="answerbox">
 
-          <input id='answer' placeholder="  ? "></input> <button type="submit" hidden></button>
+          <input id='answer' type="number" placeholder="  ? "></input> <button type="submit" hidden></button>
         </form>
       </div>
       <div class="keypad">
