Add character selection screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="wherethedragonlives">
-      <div class="dragon" id="dragon"> &#128009</div>
+      <div class="dragon" id="dragon"></div>
     </div>
     <div class="answercontainer">
       <div id="result"></div>
@@ -38,12 +38,7 @@
 
   <div id="floatingMenu" class="menu hidden">
     <h2>Character select</h2>
-    <div class="character-select">
-      <button> 🐶</button>
-      <button>🐻</button>
-      <button> 🐯</button>
-      <button> 🤖</button>
-      <button> 🐲</button>
+    <div class="character-select" id="character-select">
     </div>
     <button id="closeMenu">Close</button>
   </div>
