Add automatic character switching based on level

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <div class="top">
       <h1 id="name"> Mathdragon!</h1>
-      <!-- <a style="cursor :pointer;" id='reset'>Reset</a> -->
       <div class="hud">
         <div id='score'>Score:</div>
         <div id='level'>Level: </div>
@@ -41,6 +40,7 @@
     <div class="character-select" id="character-select">
     </div>
     <button id="closeMenu">Close</button>
+    <button id="reset" style="background-color: red;"> Reset </button>
   </div>
 
 </body>
