Commit to find what breaks the keypad

--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
       </div>
     </div>
   </div>
-  </div>
 
   <div id="floatingMenu" class="menu hidden">
     <h2>Character select</h2>
     <div class="character-select" id="character-select">
     </div>
     <button id="closeMenu">Close</button>
-    <button id="reset" style="background-color: red;"> Reset </button>
+    <button id="reset" style="background-color: red; color: black" ; font-size> Reset progress </button>
   </div>
+  <div id="splash" class="hidden">
+    <p>Level Up!</p>
+  </div>
+
 
 </body>
 
