--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <meta name="theme-color" content="#008000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="">
   <script src="./game.js" defer></script>
 
 <body>
@@ -56,7 +58,7 @@
         <button class="key" data-value="9" onmousedown="pressKey('9')">9</button>
         <button class="key" data-value="backspace" onmousedown="backspace()">⌫</button>
         <button class="key" data-value="0" onmousedown="pressKey('0')">0</button>
-        <button class="key" data-value="enter" onmousedown="submitInput()">↪</button>
+        <button class="key" data-value="enter" onmousedown="submitInput()">⮕</button>
       </div>
     </div>
   </div>
