--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Mathdragon!</title>
   <link href="styles.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
   <meta name="theme-color" content="#008000">
   <meta name="apple-mobile-web-app-status-bar-style" content="">
   <script src="./game.js" defer></script>
